ReSharper.FSharp/test/data/parsing/errors/Module member - Open 02.fs
open System
f type S
open System
